--- a/.config
+++ b/.config
@@ -208,8 +208,18 @@ CONFIG_TARGET_ROOTFS_SQUASHFS=y
 CONFIG_TARGET_SQUASHFS_BLOCK_SIZE=256
 CONFIG_TARGET_UBIFS_FREE_SPACE_FIXUP=y
 CONFIG_TARGET_UBIFS_JOURNAL_SIZE=""
-# CONFIG_GRUB_IMAGES is not set
+CONFIG_GRUB_IMAGES=y
 # CONFIG_GRUB_EFI_IMAGES is not set
+# CONFIG_GRUB_CONSOLE is not set
+CONFIG_GRUB_SERIAL="ttyS0"
+CONFIG_GRUB_BAUDRATE=115200
+# CONFIG_GRUB_FLOWCONTROL is not set
+CONFIG_GRUB_BOOTOPTS=""
+CONFIG_GRUB_TIMEOUT="0"
+CONFIG_GRUB_TITLE="OpenWrt"
+# CONFIG_ISO_IMAGES is not set
+# CONFIG_VDI_IMAGES is not set
+# CONFIG_VMDK_IMAGES is not set
 # CONFIG_TARGET_IMAGES_GZIP is not set
 
 #
@@ -217,6 +227,7 @@ CONFIG_TARGET_UBIFS_JOURNAL_SIZE=""
 #
 CONFIG_TARGET_KERNEL_PARTSIZE=16
 CONFIG_TARGET_ROOTFS_PARTSIZE=500
+CONFIG_TARGET_ROOTFS_PARTNAME=""
 # end of Target Images
 
 # CONFIG_EXPERIMENTAL is not set
@@ -1717,7 +1728,7 @@ CONFIG_PACKAGE_htop=y
 #
 # Boot Loaders
 #
-# CONFIG_PACKAGE_grub2 is not set
+CONFIG_PACKAGE_grub2=y
 # CONFIG_PACKAGE_grub2-efi is not set
 # CONFIG_PACKAGE_gummiboot is not set
 # end of Boot Loaders
